updated blog post

--- a/_posts/2015-02-02-begin.md
+++ b/_posts/2015-02-02-begin.md
@@ -2,10 +2,12 @@
 layout: post
 title: "Begin"
 description: "So Jekyll Right"
-category: 
+category:
 tags: []
 ---
 {% include JB/setup %}
 
 
-So this is a simple blog post ay? All done from command line and posted to my ery own github page!<br>
+So this is a simple blog post ay? All done from command line and posted to my very own github page, what lolz<br>
+Have to say it was pretty easy to set up, after looking at some Python based UI Libraries today (Im looking at you Clutter) <br>
+Ruby was a refreshing and safe comfort net, which isnt entirely a good thing. May be to much magic for my own good.
